# bqemulator

./: .coderabbit.yaml  .commitlintrc.yaml  .gitignore  .jscpd.json  .lychee.toml  .lycheecache  .pip-audit-ignore  .pre-commit-config.yaml  .vulture_whitelist.py  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  _typos.toml  codecov.yml  docker-compose.yml  mkdocs.yml  osv-scanner.toml  pyproject.toml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  rfc-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: chaos.yml  ci.yml  code-quality.yml  codeql.yml  conformance.yml  differential.yml  docker.yml  docs.yml  e2e.yml  examples.yml  fuzz.yml  latest-deps-canary.yml  linkcheck.yml  mutation.yml  perf.yml  release.yml  scorecard.yml
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/api/: index.html
1.0.1/examples/: index.html
1.0.1/getting-started/: index.html
1.0.1/rfcs/: index.html
1.0.1/search/: search_index.json
1.0.2/: 404.html  index.html  objects.inv  sitemap.xml
1.0.2/api/: index.html
1.0.2/examples/: index.html
1.0.2/getting-started/: index.html
1.0.2/rfcs/: index.html
1.0.2/search/: search_index.json
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/api/: index.html
1.1.0/examples/: index.html
1.1.0/getting-started/: index.html
1.1.0/rfcs/: index.html
1.1.1/: 404.html  index.html  sitemap.xml
1.1.1/api/: index.html
1.1.1/examples/: index.html
1.1.1/getting-started/: index.html
1.1.1/rfcs/: index.html
1.1.1/search/: search_index.json
1.1.2/: 404.html  index.html  sitemap.xml
1.1.2/api/: index.html
1.1.2/examples/: index.html
1.1.2/getting-started/: index.html
1.1.2/rfcs/: index.html
1.1.2/search/: search_index.json
1.1.3/: 404.html  index.html  sitemap.xml
1.1.3/api/: index.html
1.1.3/examples/: index.html
1.1.3/getting-started/: index.html
1.1.3/rfcs/: index.html
1.1.3/search/: search_index.json
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/api/: index.html
1.2.0/examples/: index.html
1.2.0/getting-started/: index.html
1.2.0/rfcs/: index.html
1.2.0/search/: search_index.json
1.3.0/: 404.html  index.html  sitemap.xml
1.3.0/api/: index.html
1.3.0/examples/: index.html
1.3.0/getting-started/: index.html
1.3.0/rfcs/: index.html
1.4.0/: 404.html  index.html  sitemap.xml
1.4.0/api/: index.html
1.4.0/examples/: index.html
1.4.0/getting-started/: index.html
1.4.0/rfcs/: index.html
1.4.0/search/: search_index.json
docs/: api.md  getting-started.md  index.md
docs/adr/: 0001-use-duckdb.md  0002-python-over-go-rust.md  0003-sqlglot-for-translation.md  0004-hexagonal-architecture.md  0005-fastapi-grpcaio-single-process.md  0006-catalog-in-reserved-schema.md  0007-pytest-fixture-as-dx.md  0008-snapshot-storage-read-api.md  0009-snapshot-layer-time-travel.md  0010-py-mini-racer-for-js-udfs.md  0011-tree-walking-scripting-interpreter.md  0012-bqml-out-of-scope.md  0013-write-api-strategies.md  0014-udf-materialization-strategy.md  0015-scripting-execution-model.md  0016-snapshot-time-semantics.md  0017-materialized-view-refresh.md  0018-caller-identity-and-row-access-enforcement.md  0019-specialized-types.md  0020-admin-import-export.md  0021-chaos-tier-design-contract.md  0022-conformance-corpus-design.md  0023-conformance-divergence-baseline.md  0024-hll-count-support-strategy.md  0025-perf-tier-design-contract.md  0026-mutation-tier-design-contract.md  0027-load-extract-avro-orc.md  0028-differential-tier-design-contract.md  0029-upload-host-endpoints.md  0030-storage-read-avro-format.md  0031-fuzz-tier-design-contract.md  0032-bq-cli-conformance-client.md  0033-storage-read-arrow-ipc-bare-message-contract.md  0034-scio-beam-emulator-routing.md  0035-code-quality-gates.md  0036-complexity-ratchet-to-c.md  0037-openssf-scorecard.md  0038-session-user.md  0039-artifact-attestations.md  0040-session-user-coverage-closure.md  (+8 more)
docs/architecture/: admin-and-import-export.md  conformance-tier.md  jobs-lifecycle.md  observability.md  overview.md  row-access-policies.md  scripting.md  specialized-types.md  sql-translation.md  storage-model.md  storage-read-api.md  storage-write-api.md  testing-strategy.md  udfs.md  versioning-and-snapshots.md
docs/examples/: README.md
docs/guides/: admin-endpoints.md  airflow-integration.md  authorized-views.md  backup-restore.md  ci-cd-patterns.md  conformance-corpus.md  dbt-integration.md  exporting-data.md  geography-spatial.md  import-from-real-project.md  information-schema.md  interval-arithmetic.md  loading-data.md  loading-from-local-files.md  materialized-views.md  observability.md  partitioning-clustering.md  query-parameters.md  querying.md  range-types.md  routines-udfs.md  row-access-policies.md  scripting.md  spark-integration.md  storage-api.md  streaming-inserts.md  time-travel.md  using-bq-cli.md
docs/quickstart/: docker-compose.md  go.md  java.md  nodejs.md  pytest.md  python.md  testcontainers.md
docs/reference/: api-configuration-coverage-matrix.md  api-coverage.md  cli.md  compatibility-matrix.md  configuration.md  conformance-coverage-matrix.md  gap-analysis.md  out-of-scope.md  sql-function-mapping.md  troubleshooting.md
docs/rfcs/: 0001-export-data-statement.md  0002-bigquery-ml-surface.md  README.md
fuzz/: __init__.py  fuzz_arrow_bridge.py  fuzz_dyn_proto.py  fuzz_sql_translator.py
main/: 404.html  index.html  objects.inv  sitemap.xml
main/api/: index.html
main/examples/: index.html
main/getting-started/: index.html
scripts/: README.md  bump_version.py  changelog.py  check_mutation_baseline.py  generate_api_coverage.py  generate_avro_fixtures.py  generate_compatibility_matrix.py  generate_coverage_matrix.py  generate_function_mapping.py  normalize_perf_baseline.py  record_conformance_fixtures.py  record_grpc_fixtures.py  record_http_fixtures.py  release.py  run_bucket.py  stage_g1_e2e_fixtures.py
tests/: conftest.py
(+4877 files in other folders)
